update cti
